--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </button>
 
     <!-- Trash Selection Buttons -->
-    <div id="trash-buttons" class="hidden">
+    <div id="trash-buttons">
         <button id="btn-organik" class="trash-btn btn-organik">
             🥬 ORGANIC
         </button>
@@ -102,11 +102,13 @@
                 <a-text value="HAZARDOUS" color="white" align="center" width="0.8" position="0 0.3 0" rotation="0 0 0"></a-text>
                 <a-cylinder class="goal-zone" data-bin-type="hazardous" position="0 0.15 0" radius="0.14" height="0.15" opacity="0" static-body></a-cylinder>
             </a-entity>
-            
-            <!-- Trash Display Area (Hidden by default) -->
-            <a-entity id="trash-display" position="0 0.5 -0.3" visible="false">
-                <a-gltf-model id="trash-model" src="#trash-organik" scale="0.15 0.15 0.15"></a-gltf-model>
-            </a-entity>
+        </a-entity>
+        
+        <!-- Trash Display Area (Above buttons at bottom of screen) -->
+        <a-entity id="trash-display" position="0 -0.3 -0.4">
+            <a-gltf-model id="trash-model-organik" src="#trash-organik" scale="0.12 0.12 0.12" visible="false" rotation="0 20 0"></a-gltf-model>
+            <a-gltf-model id="trash-model-anorganik" src="#trash-anorganik" scale="0.12 0.12 0.12" visible="false" rotation="0 20 0"></a-gltf-model>
+            <a-gltf-model id="trash-model-hazardous" src="#trash-hazardous" scale="0.12 0.12 0.12" visible="false" rotation="0 20 0"></a-gltf-model>
         </a-entity>
     </a-scene>
 
